--- a/src/global/containers/header/style.css
+++ b/src/global/containers/header/style.css
@@ -16,6 +16,7 @@
     border-bottom: 1px solid #dbdbdb;
     position: fixed;
     top: 0;
+    left: 0;
     width: 100%;
     transition: 0.2s;
     text-align: center;
