--- a/src/global/components/loader/style.css
+++ b/src/global/components/loader/style.css
@@ -25,6 +25,14 @@
     width: 64px;
     height: 64px;
 }
+
+.lds-ring-small {
+    display: inline-block;
+    position: relative;
+    width: 30px;
+    height: 30px;
+}
+
 .lds-ring div {
     box-sizing: border-box;
     display: block;
